crates/nash-report/src/type_/snapshots/nash_report__type___tests__not_a_record_pattern.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue : Primitive.int -> Primitive.int\nvalue { name } = name\n"
---
nash::type::not_a_record

  × Expected a record, found `Primitive.int`.
   ╭─[Main.nash:3:7]
 2 │ value : Primitive.int -> Primitive.int
 3 │ value { name } = name
   ·       ────┬───
   ·           ╰── field `name` pattern
   ╰────
