crates/nash-report/src/type_/snapshots/nash_report__type___tests__op_append_string_list.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = \"hello\" ++ [1]\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.string`,
  │ found `Primitive.list Primitive.int`.
   ╭─[Main.nash:2:20]
 1 │ module Main exposing (..)
 2 │ value = "hello" ++ [1]
   ·                    ─┬─
   ·                     ╰── right operand of (++)
   ╰────
