crates/nash-report/src/type_/snapshots/nash_report__type___tests__op_cons_element_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = 1 :: [\"hello\"]\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.list Primitive.int`,
  │ found `Primitive.list Primitive.string`.
   ╭─[Main.nash:2:14]
 1 │ module Main exposing (..)
 2 │ value = 1 :: ["hello"]
   ·              ────┬────
   ·                  ╰── right operand of (::)
   ╰────
