crates/nash-report/src/type_/snapshots/nash_report__type___tests__op_pipe_argument_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : Primitive.string -> Primitive.string\nf x = x\nvalue = 1 |> f\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int -> Primitive.string`,
  │ found `Primitive.string -> Primitive.string`.
   ╭─[Main.nash:4:14]
 3 │ f x = x
 4 │ value = 1 |> f
   ·              ┬
   ·              ╰── right operand of (|>)
   ╰────
