crates/nash-report/src/type_/snapshots/nash_report__type___tests__pattern_case_first_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue number =\n    case number of\n        \"hello\" -> 1\n        0 -> 2\n"
---
nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:4:9]
 3 │     case number of
 4 │         "hello" -> 1
   ·         ───┬───
   ·            ╰── case pattern 1
 5 │         0 -> 2
   ╰────
